[gd_scene load_steps=5 format=3 uid="uid://cqo0jlkvqo2qy"]

[ext_resource type="Script" path="res://Puzzles/energy_tether.gd" id="1_jhqfl"]
[ext_resource type="Texture2D" uid="uid://gjbllss8rlti" path="res://icon.svg" id="1_k70ql"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbvoh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1aq8a"]
radius = 15.2643

[node name="Energy Tether" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_jhqfl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.8147e-06, 1.90735e-06)
scale = Vector2(0.138988, 0.142959)
texture = ExtResource("1_k70ql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.04, 2.04)
shape = SubResource("RectangleShape2D_hbvoh")

[node name="TetherDetection" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TetherDetection"]
shape = SubResource("CircleShape2D_1aq8a")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(6.44, 6.44)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
